Redid the path for the imaages being used.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="assets/js/main.js"></script>
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../public/styles/style.css" />
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
     crossorigin="anonymous"></script>
         
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <img src="assets/images/BeautifulBirthsLogo.png" id="navBarLogo">
+            <img src="../public/images/BeautifulBirthsLogo.png" id="navBarLogo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -67,12 +67,12 @@
             <!-- THIS IS MY JUMBOTRON -->
             <div class="jumbotron jumbotron-fluid">
                 <div class="container" id="jumbotron-home">
-                    <img id="logo" src="assets/images/BeautifulBirthsLogo.png" href="#home" alt="Beautiful Births by Belle">
+                    <img id="logo" src="../public/images/BeautifulBirthsLogo.png" href="#home" alt="Beautiful Births by Belle">
                     <h1 class="display-1">Beautiful Births</h1>
                     <blockquote class="blockquote">
                         <footer class="blockquote-footer">by
                             <cite title="Source Title">Belle</cite>
-                        </footer>
+                        </footer
                     </blockquote>
                 </div>
                 <!-- THIS IS MY CAROUSEL -->
@@ -85,7 +85,7 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="assets/images/carouselBackground.jpg" alt="First slide">
+                            <img class="d-block w-100" src="../public/images/carouselBackground.jpg" alt="First slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <blockquote class="blockquote">
                                     <p class="carousel-quotes">"We have a secret in our culture, it's not that birth is painful, it's that women are
@@ -98,7 +98,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/images/carouselBackground.jpg" alt="Second slide">
+                            <img class="d-block w-100" src="../public/images/carouselBackground.jpg" alt="Second slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <blockquote class="blockquote">
                                     <p class="carousel-quotes">"Most women need encouraging and companionship more than they need drugs."</hp>
@@ -109,7 +109,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/images/carouselBackground.jpg" alt="Third slide">
+                            <img class="d-block w-100" src="../public/images/carouselBackground.jpg" alt="Third slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <blockquote class="blockquote">
                                     <p class="carousel-quotes">"Birth is the epicenter of women's power."</hp>
@@ -120,7 +120,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/images/carouselBackground.jpg" alt="Fourth slide">
+                            <img class="d-block w-100" src="../public/images/carouselBackground.jpg" alt="Fourth slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <blockquote class="blockquote">
                                     <p class="carousel-quotes">"Giving Birth should be your greatest achivement, not your greatest fear."</hp>
