--- a/contact.html
+++ b/contact.html
@@ -44,13 +44,23 @@
                     <a class="nav-link" id="readings-link" href="readings.html">Readings</a>
                 </li> -->
                 <li class="nav-item">
-                    <a class="nav-link" id="contact-link" href="contact.html">Contact</a>
+                    <a class="nav-link" id="contact-link" href="/contact">Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
     <div class="container" id="homepage-container">
         <div class="row " id="row-container-top">
+            <!-- JUMBOTRON FORM  -->
+            <div class="jumbotron">
+                <h1 class="display-4">Let's connect!</h1>
+                <p class="lead">Hiring a doula is an important decision and  I am sure you have a lot of question and that's GOOD!.</p>
+                <hr class="my-4">
+                <p></p>
+                <p class="lead">
+                  <a class="btn btn-primary btn-lg" href="#" role="button">Submit</a>
+                </p>
+              </div>
 
         </div>
     </div>
