Added text to contact form.

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,11 @@
                 <h1 class="display-4">Let's connect!</h1>
                 <p class="lead">Hiring a doula is an important decision and  I am sure you have a lot of question and that's GOOD!.</p>
                 <hr class="my-4">
-                <p></p>
+                <p>Now is time to provide you with some answers and I am here for that. You can call me, text me or email me.
+                    <br>
+                    I also invite you to fill out the contact form. At the end, it will give you the ability
+                    
+                    </p>
                 <p class="lead">
                   <a class="btn btn-primary btn-lg" href="#" role="button">Submit</a>
                 </p>
