--- a/public/contact.html
+++ b/public/contact.html
@@ -1,11 +1,75 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Doula-Services</title>
-</head>
+<!doctype html>
+<html>
+<header>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Beautiful Births</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/minty/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
+        crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="assets/js/main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
+        crossorigin="anonymous"></script>
+
+</header>
+
 <body>
-    <h1>Working on Contact page...</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="" id="navBarLogo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarColor03">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" id="home-link" href="index.html">Home
+                        <!-- <span class="sr-only">(current)</span> -->
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#AboutMe">
+                        <span id="about-me-link">About Me</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="services-link" href="#Services">Services</a>
+                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" id="readings-link" href="readings.html">Readings</a>
+                </li> -->
+                <li class="nav-item">
+                    <a class="nav-link" id="contact-link" href="/contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container" id="homepage-container">
+        <div class="row " id="row-container-top">
+            <!-- JUMBOTRON FORM  -->
+            <div class="jumbotron">
+                <h1 class="display-4">Let's connect!</h1>
+                <p class="lead">Hiring a doula is an important decision and  I am sure you have a lot of question and that's GOOD!.</p>
+                <hr class="my-4">
+                <p>Now is time to provide you with some answers and I am here for that. You can call me, text me or email me.
+                    <br>
+                    I also invite you to fill out the contact form. At the end, it will give you the ability
+                    
+                    </p>
+                <p class="lead">
+                  <a class="btn btn-primary btn-lg" href="#" role="button">Submit</a>
+                </p>
+              </div>
+
+        </div>
+    </div>
+
+
 </body>
+
 </html>
