--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
     crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-    <script src="assets/js/main.js"></script>
-    <link rel="stylesheet" type="text/css" media="screen" href="../public/styles/style.css" />
+    <script src="/js/main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="/styles/style.css" />
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
     crossorigin="anonymous"></script>
         
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <img src="../public/images/BeautifulBirthsLogo.png" id="navBarLogo">
+            <img src="/images/BeautifulBirthsLogo.png" id="navBarLogo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarColor03">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" id="home-link" href="index.html">Home
+                    <a class="nav-link" id="home-link" href="/">Home
                         <!-- <span class="sr-only">(current)</span> -->
                     </a>
                 </li>
@@ -45,7 +45,7 @@
                     <a class="nav-link" id="readings-link" href="readings.html">Readings</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="contact-link" href="#Contact">Contact</a>
+                    <a class="nav-link" id="contact-link" href="/contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -55,7 +55,7 @@
             <!-- THIS IS MY JUMBOTRON -->
             <div class="jumbotron jumbotron-fluid">
                 <div class="container" id="jumbotron-home">
-                    <img id="logo" src="../public/images/BeautifulBirthsLogo.png" href="#home" alt="Beautiful Births by Belle">
+                    <img id="logo" src="/images/BeautifulBirthsLogo.png" href="#home" alt="Beautiful Births by Belle">
                     <h1 class="display-1">Beautiful Births</h1>
                     <blockquote class="blockquote">
                         <footer class="blockquote-footer">by
@@ -73,7 +73,7 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="../public/images/carouselBackground.jpg" alt="First slide">
+                            <img class="d-block w-100" src="/images/carouselBackground.jpg" alt="First slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <blockquote class="blockquote">
                                     <p class="carousel-quotes">"We have a secret in our culture, it's not that birth is painful, it's that women are
@@ -86,7 +86,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../public/images/carouselBackground.jpg" alt="Second slide">
+                            <img class="d-block w-100" src="/images/carouselBackground.jpg" alt="Second slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <blockquote class="blockquote">
                                     <p class="carousel-quotes">"Most women need encouraging and companionship more than they need drugs."</hp>
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../public/images/carouselBackground.jpg" alt="Third slide">
+                            <img class="d-block w-100" src="/images/carouselBackground.jpg" alt="Third slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <blockquote class="blockquote">
                                     <p class="carousel-quotes">"Birth is the epicenter of women's power."</hp>
@@ -108,7 +108,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../public/images/carouselBackground.jpg" alt="Fourth slide">
+                            <img class="d-block w-100" src="/images/carouselBackground.jpg" alt="Fourth slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <blockquote class="blockquote">
                                     <p class="carousel-quotes">"Giving Birth should be your greatest achivement, not your greatest fear."</hp>
