Added navbar logo, linked css, adjusted control form size, added pic background.

--- a/public/index.html
+++ b/public/index.html
@@ -52,15 +52,17 @@
     </nav>
     <div class="container" id="homepage-container">
         <div class="row " id="row-container-top">
+
             <!-- THIS IS MY JUMBOTRON -->
             <div class="jumbotron jumbotron-fluid">
+                
                 <div class="container" id="jumbotron-home">
                     <img id="logo" src="/images/BeautifulBirthsLogo.png" href="#home" alt="Beautiful Births by Belle">
                     <h1 class="display-1">Beautiful Births</h1>
                     <blockquote class="blockquote">
                         <footer class="blockquote-footer">by
                             <cite title="Source Title">Belle</cite>
-                        </footer
+                        </footer>
                     </blockquote>
                 </div>
                 <!-- THIS IS MY CAROUSEL -->
