--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="/js/main.js"></script>
-    <link rel="stylesheet" type="text/css" media="screen" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/styles/style.css" />
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
         crossorigin="anonymous"></script>
 
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <img src="" id="navBarLogo">
+            <img src="/images/BeautifulBirthsLogo.png" id="navBarLogo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -37,12 +37,13 @@
                         <span id="about-me-link">About Me</span>
                     </a>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link" id="services-link" href="#Services">Services</a>
                 </li>
-                <!-- <li class="nav-item">
-                        <a class="nav-link" id="readings-link" href="readings.html">Readings</a>
-                    </li> -->
+                <li class="nav-item">
+                    <a class="nav-link" id="readings-link" href="readings.html">Readings</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" id="contact-link" href="/contact">Contact</a>
                 </li>
@@ -50,80 +51,85 @@
         </div>
     </nav>
     <div class="container" id="homepage-container">
-
-        <!--Jumbotron-->
-        <div class="jumbotron jumbotron-fluid col-md-12">
-            <h1 class="display-4">Let's connect!</h1>
-            <p class="lead">Hiring a doula is an important decision and I am sure you have a lot of question and that's GOOD!.</p>
-            <hr class="my-4">
-            <p>Now is time to provide you with the answers you are looking for and I am here for that. You can call me, text
-                me or email me.
-                <br> I also invite you to fill out the contact form. At the end, you would get a chance to schedule our first
-                meet up.</p>
-        </div>
-
-        <!--Contact form-->
-        <form>
-            <div class="form-row">
-                <!--First name field-->
-                <div class="form-group col-md-6">
-                    <label for="inputFirstName">First Name</label>
-                    <input type="text" class="form-control" id="inputFirstName" placeholder="First name">
+        <div class="row " id="row-container-top">
+            <!-- THIS IS MY JUMBOTRON -->
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container" id="jumbotron-home">
+                    <img id="logo" src="/images/BeautifulBirthsLogo.png" href="#home" alt="Beautiful Births by Belle">
+                    <h1 class="display-1">Beautiful Births</h1>
+                    <blockquote class="blockquote">
+                        <footer class="blockquote-footer">by
+                            <cite title="Source Title">Belle</cite>
+                        </footer </blockquote>
                 </div>
-                <!--Last name field-->
-                <div class="form-group col-md-6">
-                    <label for="inputLastName">Last Name</label>
-                    <input type="text" class="form-control" id="inputLastName" placeholder="Last name">
-                </div>
-            </div>
-            <div class="form-row">
-                <!--Email field-->
-                <div class="form-group col-md-5">
-                    <label for="inputEmail">Email</label>
-                    <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-                </div>
-                <!--Phone number field-->
-                <div class="form-group col-md-4">
-                    <label for="inputNumber">Phone Number</label>
-                    <input type="text" class="form-control" id="inputNumber" placeholder="(xxx) xxx-xxxx">
-                </div>
-                <!--Due date field-->
-                <div class="form-group col-md-3">
-                    <label for="inputDate">Due Date</label>
-                    <input type="text" class="form-control" id="inputDate" placeholder="xx/xx/xx">
-                </div>
-            </div>
-            <!--Comment box-->
-            <div class="form-group">
-                <label for="inputMessage">Message</label>
-                <textarea class="form-control" id="inputMessage" rows="3" placeholder="300 Character Count"></textarea>
-            </div>
-            <!--Submit button-->
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Submit</button>
-
-            <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Doula Appointment</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
+                <!-- THIS IS MY CAROUSEL -->
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="/images/carouselBackground.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <blockquote class="blockquote">
+                                    <p class="carousel-quotes">"We have a secret in our culture, it's not that birth is painful,
+                                        it's that women are strong."
+                                        </hp>
+                                        <footer class="blockquote-footer">
+                                            <cite title="Source Title">Laura Stavoe Harm</cite>
+                                        </footer>
+                                </blockquote>
+                            </div>
                         </div>
-                        <div class="modal-body">
-                            Schedule a Doula appointment today!
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="/images/carouselBackground.jpg" alt="Second slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <blockquote class="blockquote">
+                                    <p class="carousel-quotes">"Most women need encouraging and companionship more than they
+                                        need drugs."
+                                        </hp>
+                                        <footer class="blockquote-footer">
+                                            <cite title="Source Title">Ina May Gaskin</cite>
+                                        </footer>
+                                </blockquote>
+                            </div>
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary"><a href="calendly.html">Schedule</button>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="/images/carouselBackground.jpg" alt="Third slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <blockquote class="blockquote">
+                                    <p class="carousel-quotes">"Birth is the epicenter of women's power."
+                                        </hp>
+                                        <footer class="blockquote-footer">
+                                            <cite title="Source Title">Ani DiFranco</cite>
+                                        </footer>
+                                </blockquote>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="/images/carouselBackground.jpg" alt="Fourth slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <blockquote class="blockquote">
+                                    <p class="carousel-quotes">"Giving Birth should be your greatest achivement, not your
+                                        greatest fear."
+                                        </hp>
+                                        <footer class="blockquote-footer">
+                                            <cite title="Source Title">Jane Weideman</cite>
+                                        </footer>
+                                </blockquote>
+                            </div>
                         </div>
                     </div>
+
                 </div>
             </div>
-        </form>
+        </div>
     </div>
+
+
 </body>
 
 </html>
