Rearranged the columns.

--- a/public/contact.html
+++ b/public/contact.html
@@ -68,14 +68,14 @@
                 </p>
                 <div class="container" id="jumbotron-contact">
                     <div class="row">
-                        <div class="col-6 col-md-4">
+                        <div class="col-6 col-md-6">
                             <div class="form-group">
                                 <label for="firstName">First Name</label>
                                 <input type="text" class="form-control form-control-sm" id="firstName" placeholder="Ex: Jane">
                             </div>
                         </div>
-                        <div class="col-6 col-md-4">my middle col</div>
-                        <div class="col-6 col-md-4">
+                        <!-- <div class="col-sm-2 col-xs-2">col</div> -->
+                        <div class="col-6 col-md-6">
                             <div class="form-group">
                                 <label for="lastName">Last Name</label>
                                 <input type="text" class="form-control form-control-sm" id="lastName" placeholder="Ex: Smith">
@@ -84,28 +84,28 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-6 col-md-4">
+                            <div class="col-6 col-md-6">
                             <div class="form-group">
                                 <label for="exampleInputEmail1">Phone number</label>
                                 <input type="tel" class="form-control form-control-sm" id="phoneNum" placeholder="Ex: 954-123-4567">
                             </div>
                         </div>
-                        <div class="col-6 col-md-4">my middle col</div>
-                        <div class="col-6 col-md-4">
+                        <!-- <div class="col-sm-2 col-xs-2">col</div> -->
+                        <div class="col-6 col-md-6">
                             <div class="form-group">Email address</label>
                                 <input type="email" class="form-control form-control-sm" id="emailAddress" placeholder="Ex: email@noemail.com.">
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-6 col-md-4">
+                            <div class="col-6 col-md-6">
                             <div class="form-group">
                                 <label for="exampleInputEmail1">How many weeks are you?</label>
                                 <input type="number" class="form-control form-control-sm" id="weeks" placeholder="Ex: 34">
                             </div>
                         </div>
-                        <div class="col-6 col-md-4">my middle col</div>
-                        <div class="col-6 col-md-4">
+                        <!-- <div class="col-sm-2 col-xs-2">col</div> -->
+                        <div class="col-6 col-md-6">
                             <div class="form-group">
                                 <label for="dueDate">What is your estimated due date?</label>
                                 <input type="date" class="form-control form-control-sm" id="EDD" placeholder="">
@@ -113,14 +113,14 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-6 col-md-4">
+                            <div class="col-6 col-md-6">
                             <div class="form-group">
                                 <label for="Textarea">Anything you would like to add...</label>
                                 <textarea class="form-control form-control-sm" id="Textarea" rows="3"></textarea>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4">my middle col</div>
-                        <div class="col-6 col-md-4">
+                        <!-- <div class="col-sm-2 col-xs-2"> col</div> -->
+                        <div class="col-6 col-md-6">
                             <fieldset class="form-group">
                                 <legend>How would you like to be contacted?</legend>
                                 <div class="form-check">
@@ -145,7 +145,7 @@
                         </div>
                     </div>
                     <p class="lead">
-                        <a class="btn btn-primary btn-lg" href="#" role="button">Submit</a>
+                        <button type="button" class="btn btn-outline-secondary" id="submitForm">Submit</button>
                     </p>
                 </div>
 
