--- a/public/test-contactShow.html
+++ b/public/test-contactShow.html
@@ -62,7 +62,7 @@
                     <th scope="col">Due Date</th>
                     <th scope="col">Number of Weeks</th>
                     <th scope="col">Has Appointment</th>
-                    <th scope="col">Contact preference</th>
+                    <th scope="col">Contact Preference</th>
                     <th scope="col">Message</th>
                   </tr>
                 </thead>
@@ -70,6 +70,26 @@
             <!-- live data will be added here as new table rows and colummns -->
         </table>
     </div>
+    <!-- MODAL -->
+    <div class="modal">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Modal title</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <p>Modal body text goes here.</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
 
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
