--- a/public/test-contactShow.html
+++ b/public/test-contactShow.html
@@ -63,7 +63,7 @@
                     <th scope="col">Number of Weeks</th>
                     <th scope="col">Has Appointment</th>
                     <th scope="col">Contact Preference</th>
-                    <th scope="col">Message</th>
+                    <th scope="col"><button type="button" class="btn btn-secondary" id="modal">View Message</button></th>
                   </tr>
                 </thead>
                 
@@ -71,7 +71,7 @@
         </table>
     </div>
     <!-- MODAL -->
-    <div class="modal">
+    <div class="modal" data-modal="toggle" id="messageModal">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
