--- a/public/contact.html
+++ b/public/contact.html
@@ -63,7 +63,7 @@
         </div>
 
         <!--Contact form-->
-        <form>
+        <form action="http://localhost:8080/" method="POST">
             <div class="form-row">
                 <!--First name field-->
                 <div class="form-group col-md-6">
@@ -100,7 +100,7 @@
             </div>
             <!--Submit button-->
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Submit</button>
+            <button type="button" class="btn btn-primary" data-toggle="modal" id="sumbitBtn" data-target="#exampleModal">Submit</button>
 
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -116,8 +116,8 @@
                             Schedule a Doula appointment today!
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary"><a href="calendly.html">Schedule</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeBtn" action="index.html" method="post">Close</button>
+                            <button type="button" class="btn btn-primary" id="scheduleBtn" action="calendly.html" method="post" >Schedule</button>
                         </div>
                     </div>
                 </div>
@@ -126,4 +126,4 @@
     </div>
 </body>
 
-</html>
+</html>`
