weeks added to model and table

--- a/public/test-contactShow.html
+++ b/public/test-contactShow.html
@@ -63,7 +63,7 @@
                     <th scope="col">Number of Weeks</th>
                     <th scope="col">Has Appointment</th>
                     <th scope="col">Contact Preference</th>
-                    <th scope="col"><button type="button" class="btn btn-secondary" id="modal">View Message</button></th>
+                    <th scope="col">View Message</th>
                   </tr>
                 </thead>
                 
