Created footer on the index.html page. added logo.

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,9 @@
                         </footer>
                     </blockquote>
                 </div>
+
                 <!-- THIS IS MY CAROUSEL -->
+
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -126,6 +128,29 @@
             </div>
         </div>
     </div>
+    <div id="HomeBirthInfo">
+        <h1>This is where I am going to put I am not really sure what actually.</h1>
+    </div>
+
+                <!-- THIS IS MY FOOTER-->    
+    <footer id="main-footer">
+        <div class="container" id="footer-container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12" >
+                    <img id="logofooter" src="/images/BeautifulBirthsLogo.png" href="#home" alt="Beautiful Births by Belle">
+                </div>
+            </div>
+            <div class="row">
+                <div id="footerContactInfo">
+                    
+                </div>
+            </div>
+        </div>
+
+        <div id="socialMedia">
+
+        </div>
+    </footer>
 
     
 </body>
