--- a/public/contact.html
+++ b/public/contact.html
@@ -63,7 +63,7 @@
         </div>
 
         <!--Contact form-->
-        <form action="http://localhost:8080/" method="POST">
+        <form id="doulaForm" action="http://localhost:8080/" method="POST"> <!--What would you put in the action???-->
             <div class="form-row">
                 <!--First name field-->
                 <div class="form-group col-md-6">
@@ -100,14 +100,14 @@
             </div>
             <!--Submit button-->
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" id="sumbitBtn" data-target="#exampleModal">Submit</button>
+            <button type="button" class="btn btn-primary" data-toggle="modal" id="myBtn" data-target="#doulaModal">Submit</button>
 
             <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="doulaModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Doula Appointment</h5>
+                            <h5 class="modal-title" id="doulaModalLabel">Doula Appointment</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -117,7 +117,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeBtn" action="index.html" method="post">Close</button>
-                            <button type="button" class="btn btn-primary" id="scheduleBtn" action="calendly.html" method="post" >Schedule</button>
+                            <button type="button" class="btn btn-primary" id="scheduleBtn" action="calendly.html" method="post">Schedule</button>
                         </div>
                     </div>
                 </div>
@@ -126,4 +126,4 @@
     </div>
 </body>
 
-</html>`
+</html>
