--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" type="text/css" media="screen" href="/styles/style.css" />
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/brands.css" integrity="sha384-rf1bqOAj3+pw6NqYrtaE1/4Se2NBwkIfeYbsFdtiR6TQz0acWiwJbv1IM/Nt/ite"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/fontawesome.css" integrity="sha384-1rquJLNOM3ijoueaaeS5m+McXPJCGdr5HcA03/VHXxcp2kX2sUrQDmFc3jR5i/C7"
+        crossorigin="anonymous">
 
 </header>
 
@@ -146,16 +150,45 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-lg-4 col-md-4"></div>
+                <div class="col-lg-4 col-md-4 text-center" id="socialMedia">
+                    
+                        <li class="list-inline-item">
+                            <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/annabelle-chauviray-11326088/">
+                                <i class="fab fa-facebook-square"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/BelleWolski">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="social-link rounded-circle text-white mr-3" href="https://github.com/Belle85">
+                                <i class="fab fa-yelp"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                                <a class="social-link rounded-circle text-white mr-3" href="https://github.com/Belle85">
+                                    <i class="fab fa-pinterest-square"></i>
+                                </a>
+                            </li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-md-4"></div>
+            </div>
+            <div class="row">
                 <div class="col-lg-12 col-md-12" class="myInfo" id="footerContactInfo">
                     <h2>Beautiful Births Doula Services</h2>
-                    <p>hello@beautifulbirthsbybelle ~ Business: 954-866-3668 || Cell: 863-991-0961</p>
-                    <p>4026 Inverrary Boulevard, Lauderhill, FL 33319</p>
+                    <p class="myInfo">hello@beautifulbirthsbybelle ~ Business: 954-866-3668 || Cell: 863-991-0961</p>
+                    <p class="myInfo">4026 Inverrary Boulevard, Lauderhill, FL 33319</p>
                 </div>
             </div>
-        </div>
-        <div class="col-lg-12 col-md-12">
-            <p id="copyright"> Copyright © 2018 beautifulbirthsbybelle | All rights reserved.</p>
-        </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-12">
+                    <p id="copyright"> Copyright © 2018 beautifulbirthsbybelle | All rights reserved.</p>
+                </div>
+            </div>
     </footer>
 </body>
 
